--- a/vdl_mc_img-gen_cifar10.ipynb
+++ b/vdl_mc_img-gen_cifar10.ipynb
@@ -202,7 +202,9 @@
    "id": "c626eb9bf0c8f3a9",
    "metadata": {},
    "source": [
-    "# overfitting a single batch"
+    "# simple diffusion model\n",
+    "\n",
+    "## structure"
    ]
   },
   {
@@ -366,7 +368,7 @@
    "id": "2139b27717b3591e",
    "metadata": {},
    "source": [
-    "## forward process (Noise sheduler)\n",
+    "### forward process (Noise sheduler)\n",
     "\n",
     "the goal is to sample an image at a timestamp t and deliver it to the model. this makes the training much easier and smoother as the model can learn to denoise the image at each timestep, compared to sequently iterating over the same image over and over again. "
    ]
@@ -514,9 +516,7 @@
    "cell_type": "markdown",
    "id": "cea3ec9cb37bb985",
    "metadata": {},
-   "source": [
-    "## Simple Diffusion"
-   ]
+   "source": "### Simple Diffusion"
   },
   {
    "cell_type": "code",
@@ -768,9 +768,7 @@
    "cell_type": "markdown",
    "id": "68ab13373678d113",
    "metadata": {},
-   "source": [
-    "## Loss function"
-   ]
+   "source": "### Loss function"
   },
   {
    "cell_type": "code",
@@ -802,9 +800,7 @@
    "cell_type": "markdown",
    "id": "8316b681720103ce",
    "metadata": {},
-   "source": [
-    "## sampling"
-   ]
+   "source": "### sampling"
   },
   {
    "cell_type": "code",
@@ -930,6 +926,12 @@
    "execution_count": 75
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## overfittest",
+   "id": "80e35465f6aadadf"
+  },
+  {
    "cell_type": "code",
    "id": "2b2fa537d7c7375a",
    "metadata": {
@@ -1012,6 +1014,12 @@
    "execution_count": 69
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### visualize generated images and compare to original",
+   "id": "f80198b8181d3526"
+  },
+  {
    "cell_type": "code",
    "id": "43d5bad328abd412",
    "metadata": {
@@ -1074,7 +1082,7 @@
    "id": "a87fd2fb92778d9c",
    "metadata": {},
    "source": [
-    "#conclusion:\n",
+    "### conclusion\n",
     "mit batchnorm wurde das bild mit der zeit mit einem bestimmten farbton versehen (ab epoche 1000) mit groupnorm konnte ich das leider auch nicht verhindern, jedoch die genauigkeit der pixel wurde insgesamt besser (bis epoche 10'000). Was auffällt ist, dass die groupnorm bei den ersten schritten ein viel knalligeres bild erzeugt, als mit der batchnorm. Nach einigen hundert, gleicht es sich dann aus. Die groupnorm performt aber dann wieder bei hohen epochen (30'000) besser, es kommt zu originalen farben besser hin."
    ]
   },
@@ -1093,9 +1101,7 @@
    "cell_type": "markdown",
    "id": "b7101f3676c45057",
    "metadata": {},
-   "source": [
-    "# simple diffusion model"
-   ]
+   "source": "## train on full data from one label"
   },
   {
    "cell_type": "code",
@@ -1691,6 +1697,12 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### visualize generated images and compare to original",
+   "id": "d213f8391eafe8a9"
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "5c8a9223dd827555",
@@ -1818,7 +1830,7 @@
    "source": [
     "#test and let the model generate an image\n",
     "with torch.no_grad():\n",
-    "    x_gen_new = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model_simpleU, terms[\"posterior_variance\"])\n",
+    "    x_gen_new = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model_simpleU, terms[\"posterior_variance\"],visualize=False)\n",
     "\n",
     "compare_images(train_1label[100], x_gen_new[0])"
    ]
@@ -1860,10 +1872,44 @@
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    x_gen_new = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model_simpleU, terms[\"posterior_variance\"])\n",
+    "    x_gen_new = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model_simpleU, terms[\"posterior_variance\"],visualize=False)\n",
     "\n",
-    "compare_images(train_1label[1000], x_gen_new[0])"
+    "compare_images(train_1label[1000], x_gen_new[0][0])"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### FID Score",
+   "id": "fa822d4366797642"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: FID Score",
+   "id": "1a25a7075808efc7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### conclusion",
+   "id": "15f312b845503208"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: Conclusion",
+   "id": "442bb49bc97927c4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### save model",
+   "id": "e5041515b885b26c"
   },
   {
    "cell_type": "code",
@@ -1877,7 +1923,7 @@
     "    \"epoch\": 1000,\n",
     "    \"model_state_dict\": model_simpleU.state_dict(),\n",
     "    \"optimizer_state_dict\": optimizer.state_dict(),\n",
-    "    \"loss\": loss  # optional\n",
+    "    \"loss\": loss\n",
     "}\n",
     "\n",
     "torch.save(checkpoint, \"checkpoint_simpleU.pt\")"
@@ -1895,12 +1941,66 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## train on full data from all labels",
+   "id": "77b605567b146b79"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: train on all labels",
+   "id": "ecbe15a329da5fb5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### visualize generated images and compare to original",
+   "id": "8a3a4d27ad5a4aca"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: visualize generated images and compare to original",
+   "id": "64d53ed5dfb3c501"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### FID Score",
+   "id": "7b0807d43d8c823e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: FID Score",
+   "id": "337a97afea9235d3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### conclusion",
+   "id": "c0798c6f31ce72d6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: Conclusion",
+   "id": "6a259216ab3a7fa2"
+  },
+  {
    "cell_type": "markdown",
    "id": "bcabc60f1f26eb3",
    "metadata": {},
-   "source": [
-    "# conditonal diffusion model\n"
-   ]
+   "source": "# conditonal diffusion model"
   },
   {
    "cell_type": "code",
@@ -1973,6 +2073,12 @@
    ],
    "outputs": [],
    "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## overfittest",
+   "id": "d9e93aa10f8570e9"
   },
   {
    "cell_type": "code",
@@ -2514,10 +2620,15 @@
    "cell_type": "markdown",
    "source": [
     "TODO: FID Score:\n",
-    " pysisch in path speichern\n",
-    " \n"
+    " pysisch in path speichern"
    ],
    "id": "d9334e7ad043e1f4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### visualize generated images and compare to original",
+   "id": "6f8abcff0ab4f5de"
   },
   {
    "cell_type": "code",
@@ -2586,28 +2697,38 @@
    "execution_count": 83
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-03T00:44:16.925110Z",
-     "start_time": "2025-01-03T00:44:16.917951Z"
-    }
-   },
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### FID Score",
+   "id": "8a7c887ba9730212"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "80c8ad3f6993ba29",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 32, 32])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 47
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: FID Score",
+   "id": "28fea25b93eb05b2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### conclusion",
+   "id": "a1f8bb7e90495066"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: Conclusion",
+   "id": "12311365a9a1e6c3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## train on full data with all labels",
+   "id": "d87f1cb38c0f3d97"
   },
   {
    "metadata": {},
@@ -2616,6 +2737,68 @@
    "execution_count": null,
    "source": "",
    "id": "b21616bc9d4f9782"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### visualize generated images and compare to original",
+   "id": "36c0f62e729c6637"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: visualize generated images and compare to original",
+   "id": "527799dab894ac07"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### FID Score",
+   "id": "e8c65a08d291557f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: FID Score",
+   "id": "76b64412813af5a4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### conclusion",
+   "id": "3b54cc7233f62346"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: Conclusion",
+   "id": "595f2a167aafc2e0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# examples of generated images with different default labels",
+   "id": "32f614b9b201ee4b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODO: examples of generated images with different default labels",
+   "id": "6492f19504cf02e4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# summary",
+   "id": "9fe15ff0f9d904ed"
   }
  ],
  "metadata": {
