unconditional train on all data from all labels

--- a/vdl_mc_img-gen_cifar10.ipynb
+++ b/vdl_mc_img-gen_cifar10.ipynb
@@ -1267,7 +1267,7 @@
     "print(f\"Number of images in label 1 from trainset: {len(train_1label)}\")\n",
     "\n",
     "#init dataloader\n",
-    "trainloader = torch.utils.data.DataLoader(train_1label, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)"
+    "trainloader_1label = torch.utils.data.DataLoader(train_1label, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)"
    ]
   },
   {
@@ -1674,7 +1674,7 @@
    "source": [
     "for epoch in tqdm(range(epochs)):\n",
     "    model_simpleU.train()\n",
-    "    for i, data in enumerate(trainloader):\n",
+    "    for i, data in enumerate(trainloader_1label):\n",
     "        optimizer.zero_grad()\n",
     "        t = torch.randint(0, T, (BATCH_SIZE,), device=device).long()\n",
     "        loss = get_loss(model_simpleU, data, t, terms[\"sqrt_alphas_cumprod\"], terms[\"sqrt_one_minus_alphas_cumprod\"], device)\n",
@@ -1951,8 +1951,75 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "# TODO: train on all labels",
-   "id": "ecbe15a329da5fb5"
+   "source": [
+    "model_simpleU_all = SimpleUnet()\n",
+    "print(\"Num params: \", sum(p.numel() for p in model_simpleU_all.parameters()))\n",
+    "model_simpleU_all"
+   ],
+   "id": "6c8213418496df9e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "T = 100\n",
+    "betas = linear_beta_schedule(timesteps=T)\n",
+    "terms = precompute_terms(betas)\n",
+    "model_simpleU_all.to(device)\n",
+    "optimizer = torch.optim.Adam(model_simpleU_all.parameters(), lr=0.001)\n",
+    "epochs = 1001\n",
+    "BATCH_SIZE = 128"
+   ],
+   "id": "9bcfc4e9551f0a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "trainloader = torch.utils.data.DataLoader(trainset, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)",
+   "id": "b007898be62fc307"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "wandb.init(project=\"simpleDiffusion\", entity=\"floowbaumgartner\", name=\"SimpleDiffusion_all_labels\")",
+   "id": "23354af4f5fe3c4b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "for epoch in tqdm(range(epochs)):\n",
+    "    model_simpleU_all.train()\n",
+    "    for i, data in enumerate(trainloader):\n",
+    "        optimizer.zero_grad()\n",
+    "        t = torch.randint(0, T, (BATCH_SIZE,), device=device).long()\n",
+    "        loss = get_loss(model_simpleU_all, data, t, terms[\"sqrt_alphas_cumprod\"], terms[\"sqrt_one_minus_alphas_cumprod\"], device)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f\"Epoch {epoch} Loss: {loss.item()}\")\n",
+    "        \n",
+    "        if epoch in {10, 100, 200, 300, 500, 700, 900, 1000}:\n",
+    "            with torch.no_grad():\n",
+    "                x_gen = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model_simpleU, terms[\"posterior_variance\"])\n",
+    "                \n",
+    "        wandb.log({\n",
+    "        \"epoch\": epoch,\n",
+    "        \"loss\": loss.item(),\n",
+    "    })\n",
+    "                \n",
+    "wandb.finish()"
+   ],
+   "id": "b015a7d44723d32b"
   },
   {
    "metadata": {},
@@ -2246,7 +2313,7 @@
     "        break\n",
     "\n",
     "# 4. Create a Subset containing only those desired indices\n",
-    "trainset = Subset(trainset, desired_indices)"
+    "trainset_cond_subset = Subset(trainset, desired_indices)"
    ],
    "id": "4a80fba9d13f7ce3",
    "outputs": [],
@@ -2262,7 +2329,7 @@
     }
    },
    "source": [
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)\n",
+    "trainloader_cond_subset = torch.utils.data.DataLoader(trainset_cond_subset, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)\n",
     "wandb.init(project=\"DDPM-Conditional\", entity=\"floowbaumgartner\", name=\"overfit-conditional\")"
    ],
    "outputs": [
@@ -2354,7 +2421,7 @@
    "source": [
     "for epoch in tqdm(range(epochs)):\n",
     "    model_cond.train()\n",
-    "    for i, (data, label) in enumerate(trainloader):\n",
+    "    for i, (data, label) in enumerate(trainloader_cond_subset):\n",
     "        optimizer.zero_grad()\n",
     "        label = label.to(device)\n",
     "        t = torch.randint(0, T, (BATCH_SIZE,), device=device).long()\n",
