conditional train on all data from all labels

--- a/vdl_mc_img-gen_cifar10.ipynb
+++ b/vdl_mc_img-gen_cifar10.ipynb
@@ -945,7 +945,7 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) #changed from 1e-4\n",
     "epochs = 30_000\n",
     "BATCH_SIZE = 1\n",
-    "T = 100 #TODO 1000"
+    "T = 100 #TODO try 1000"
    ],
    "outputs": [],
    "execution_count": 68
@@ -970,9 +970,9 @@
     "    if epoch % 100 == 0:\n",
     "        print(f\"Epoch {epoch} Loss: {loss.item()}\")\n",
     "        \n",
-    "        if epoch in {10, 100, 1000, 5000, 10000, 15000, 20000, 25000, 29500}:\n",
+    "        if epoch in {10, 100, 1000, 5000, 10000, 15000, 20000, 25000, 29900}:\n",
     "            with torch.no_grad():\n",
-    "                x_gen = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model, terms[\"posterior_variance\"],la)\n",
+    "                x_gen = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model, terms[\"posterior_variance\"])\n",
     "                \n",
     "                wandb.log({\n",
     "                \"epoch\": epoch,\n",
@@ -1062,28 +1062,12 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "id": "303968b7-4974-4090-aa48-ebff8270eabc",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-02T14:37:21.440544Z",
-     "start_time": "2025-01-02T14:37:21.440544Z"
-    }
-   },
-   "source": [
-    "x_gen_dn = denormalize_and_to_numpy(x_gen[0])\n",
-    "x_gen_dn.min()"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "cell_type": "markdown",
    "id": "a87fd2fb92778d9c",
    "metadata": {},
    "source": [
     "### conclusion\n",
-    "mit batchnorm wurde das bild mit der zeit mit einem bestimmten farbton versehen (ab epoche 1000) mit groupnorm konnte ich das leider auch nicht verhindern, jedoch die genauigkeit der pixel wurde insgesamt besser (bis epoche 10'000). Was auffällt ist, dass die groupnorm bei den ersten schritten ein viel knalligeres bild erzeugt, als mit der batchnorm. Nach einigen hundert, gleicht es sich dann aus. Die groupnorm performt aber dann wieder bei hohen epochen (30'000) besser, es kommt zu originalen farben besser hin."
+    "mit batchnorm wurde das bild mit der Zeit mit einem bestimmten farbton versehen (ab epoche 1000) mit groupnorm konnte ich das leider auch nicht verhindern, jedoch die genauigkeit der pixel wurde insgesamt besser (bis epoche 10'000). Was auffällt ist, dass die groupnorm bei den ersten schritten ein viel knalligeres bild erzeugt, als mit der batchnorm. Nach einigen hundert, gleicht es sich dann aus. Die groupnorm performt aber dann wieder bei hohen epochen (30'000) besser, es kommt zu originalen farben besser hin."
    ]
   },
   {
@@ -2032,7 +2016,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "# TODO: visualize generated images and compare to original",
+   "source": [
+    "\n",
+    "# TODO: visualize generated images and compare to original"
+   ],
    "id": "64d53ed5dfb3c501"
   },
   {
@@ -2283,7 +2270,7 @@
     "terms = precompute_terms(betas)\n",
     "model_cond.to(device)\n",
     "optimizer = torch.optim.Adam(model_cond.parameters(), lr=0.001)\n",
-    "epochs = 1_000\n",
+    "epochs = 5_001\n",
     "BATCH_SIZE = 2"
    ],
    "outputs": [],
@@ -2330,7 +2317,7 @@
    },
    "source": [
     "trainloader_cond_subset = torch.utils.data.DataLoader(trainset_cond_subset, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)\n",
-    "wandb.init(project=\"DDPM-Conditional\", entity=\"floowbaumgartner\", name=\"overfit-conditional\")"
+    "wandb.init(project=\"Conditional-Diffusion\", entity=\"floowbaumgartner\", name=\"overfit-conditional\")"
    ],
    "outputs": [
     {
@@ -2432,7 +2419,7 @@
     "    if epoch % 100 == 0:\n",
     "        print(f\"Epoch {epoch} Loss: {loss.item()}\")\n",
     "        \n",
-    "        if epoch in {1, 10, 50, 70, 90, 100, 200, 290, 300, 500, 800, 900, 990, 1000}:\n",
+    "        if epoch in {100, 200, 500, 700, 1000, 2000, 3000, 4000, 5000}:\n",
     "            with torch.no_grad():\n",
     "                x_gen = sample_plot_image(T,terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas, model_cond, terms[\"posterior_variance\"],num_classes)\n",
     "                \n",
@@ -2802,8 +2789,79 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "num_classes = 10\n",
+    "model_cond_all = ConditionalUnet(num_classes=num_classes)\n",
+    "print(\"Num params: \", sum(p.numel() for p in model_cond_all.parameters()))\n",
+    "model_cond_all"
+   ],
    "id": "b21616bc9d4f9782"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "T = 100 #TODO 1000?\n",
+    "betas = linear_beta_schedule(timesteps=T)\n",
+    "terms = precompute_terms(betas)\n",
+    "model_cond_all.to(device)\n",
+    "optimizer = torch.optim.Adam(model_cond_all.parameters(), lr=0.001)\n",
+    "epochs = 1_001\n",
+    "BATCH_SIZE = 64"
+   ],
+   "id": "7e069339709982e8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "trainloader_cond = torch.utils.data.DataLoader(trainset, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)",
+   "id": "31b4936a9ce76727"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "wandb.init(project=\"Conditional-Diffusion\", entity=\"floowbaumgartner\", name=\"conditional_lr001_BS64_tdim128\")",
+   "id": "68e9034b4ebe47ee"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "for epoch in tqdm(range(epochs)):\n",
+    "    model_cond_all.train()\n",
+    "    for i, (data, label) in enumerate(trainloader_cond):\n",
+    "        optimizer.zero_grad()\n",
+    "        label = label.to(device)\n",
+    "        t = torch.randint(0, T, (BATCH_SIZE,), device=device).long()\n",
+    "        loss = get_loss(model_cond, data, t, terms[\"sqrt_alphas_cumprod\"], terms[\"sqrt_one_minus_alphas_cumprod\"],\n",
+    "                        device, label)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f\"Epoch {epoch} Loss: {loss.item()}\")\n",
+    "\n",
+    "        if epoch in {10, 100, 200, 300, 500, 700, 900, 1000}:\n",
+    "            with torch.no_grad():\n",
+    "                x_gen = sample_plot_image(T, terms[\"sqrt_one_minus_alphas_cumprod\"], terms[\"sqrt_recip_alphas\"], betas,\n",
+    "                                          model_cond, terms[\"posterior_variance\"], num_classes)\n",
+    "\n",
+    "        wandb.log({\n",
+    "            \"epoch\": epoch,\n",
+    "            \"loss\": loss.item(),\n",
+    "        })\n",
+    "\n",
+    "wandb.finish()"
+   ],
+   "id": "fe758cb38e839d33"
   },
   {
    "metadata": {},
@@ -2866,6 +2924,14 @@
    "cell_type": "markdown",
    "source": "# summary",
    "id": "9fe15ff0f9d904ed"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# TODo: do bottleneck",
+   "id": "c5c5b8bed22701b3"
   }
  ],
  "metadata": {
