documentations attention task

--- a/vdl_mc_attentionTask.ipynb
+++ b/vdl_mc_attentionTask.ipynb
@@ -12,6 +12,7 @@
    },
    "outputs": [],
    "source": [
+    "# Import necessary libraries and modules for data generation and model training\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import shapes1d_dataset_generator as ShapeGen\n",
@@ -54,7 +55,9 @@
    "id": "3c3a1f27ab5e416c",
    "metadata": {},
    "source": [
-    "# Shapes1dDataset"
+    "# Shapes1dDataset\n",
+    "\n",
+    "The dataset consists of sequences where each shape (triangle or rectangle) has a specific width, height, and position. The input sequences represent the original shapes, while the target sequences modify the heights to reflect the average for each shape type."
    ]
   },
   {
@@ -80,10 +83,17 @@
     }
    ],
    "source": [
+    "# Initialize and prepare the Shapes1d dataset, generating sequences of shapes (input and target)\n",
     "gen = ShapeGen.GeneratorShapes(10)\n",
     "x0, y0, x, y, = gen.generate()\n",
     "ShapeGen.plot_shapes(y0,y)"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The input y0 is a sequence of shapes, while the target y is a sequence of shapes with modified heights. The goal is to train a model to predict the target sequence y.",
+   "id": "95690e0ea3712d7a"
   },
   {
    "cell_type": "code",
@@ -108,6 +118,7 @@
     }
    ],
    "source": [
+    "# Initialize and prepare the Shapes1d dataset, generating sequences of shapes (input and target)\n",
     "training_data = ShapeGen.Shapes1dDataset(10000,10)\n",
     "training_loader = DataLoader(training_data, batch_size=32, shuffle=True)\n",
     "\n",
@@ -120,7 +131,8 @@
    "id": "83ea0abd2d0495a0",
    "metadata": {},
    "source": [
-    "# Conv1DNet and Conv1DNetWithAttention"
+    "# Conv1DNet and Conv1DNetWithAttention\n",
+    "We define two models: `Conv1DNet` and `Conv1DNetWithAttention`. The `Conv1DNet` model consists of four convolutional layers, while the `Conv1DNetWithAttention` model includes an additional multi-head attention layer."
    ]
   },
   {
@@ -158,7 +170,7 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.conv1 = nn.Conv1d(in_channels=1,  out_channels=64, kernel_size=5, padding=2) #TODO CHannels anpassen\n",
+    "        self.conv1 = nn.Conv1d(in_channels=1,  out_channels=64, kernel_size=5, padding=2)\n",
     "        self.conv2 = nn.Conv1d(in_channels=64, out_channels=128, kernel_size=5, padding=2)\n",
     "        self.attention = nn.MultiheadAttention(embed_dim=128, num_heads=1) \n",
     "        self.conv3 = nn.Conv1d(in_channels=128, out_channels=256, kernel_size=5, padding=2)\n",
@@ -168,24 +180,19 @@
     "\n",
     "    def forward(self, x, return_attention=False):\n",
     "\n",
-    "        # Stufe 1+2: Convs\n",
-    "        x = self.relu(self.conv1(x))  # -> [B, 32, seq_len]\n",
-    "        x = self.relu(self.conv2(x))  # -> [B, 64, seq_len]\n",
+    "        x = self.relu(self.conv1(x))\n",
+    "        x = self.relu(self.conv2(x))\n",
     "\n",
-    "        # Permute: (B, 64, seq_len) -> (seq_len, B, 64)\n",
+    "        # Permute: (B, 64, seq_len) to (seq_len, B, 64)\n",
     "        x_perm = x.permute(2, 0, 1)\n",
     "\n",
-    "        # Multi-Head-Attention (Self-Attention):\n",
-    "        # attn_out: (seq_len, B, 64)\n",
-    "        # attn_weights: (B, num_heads, seq_len, seq_len)  (wegen average_attn_weights=False)\n",
     "        attn_out, attn_weights = self.attention(x_perm, x_perm, x_perm)\n",
     "\n",
-    "        # Zurück in (B, 64, seq_len)\n",
+    "        # back to (B, 64, seq_len)\n",
     "        x = attn_out.permute(1, 2, 0)\n",
     "\n",
-    "        # Stufe 3+4: Convs\n",
-    "        x = self.relu(self.conv3(x))  # -> [B, 128, seq_len]\n",
-    "        x = self.conv4(x)             # -> [B, 1, seq_len]\n",
+    "        x = self.relu(self.conv3(x))\n",
+    "        x = self.conv4(x)\n",
     "\n",
     "        if return_attention:\n",
     "            return x, attn_weights\n",
@@ -205,6 +212,7 @@
    },
    "outputs": [],
    "source": [
+    "# Define the loss function and optimizer for model training\n",
     "def train_model(model, dataloader, num_epochs=10, lr=1e-3, device='cuda'):\n",
     "    model.to(device)\n",
     "    criterion = nn.MSELoss()\n",
@@ -514,6 +522,7 @@
     }
    ],
    "source": [
+    "# Define the loss function and optimizer for model training\n",
     "# Modell without Attention\n",
     "model_no_attn = Conv1DNet()\n",
     "print(\"Training Modell without Attention ...\")\n",
@@ -799,6 +808,7 @@
     }
    ],
    "source": [
+    "# Define the loss function and optimizer for model training\n",
     "# Modell with Attention\n",
     "model_with_attn = Conv1DNetWithAttention()\n",
     "print(\"\\nTraining Modell with Attention ...\")\n",
@@ -836,7 +846,7 @@
     }
    ],
    "source": [
-    "# Plot der Trainingskurven\n",
+    "# Plot the loss curves for the models with and without attention\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(loss_no_attn, label='without Attention')\n",
     "plt.plot(loss_with_attn, label='with Attention')\n",
@@ -846,6 +856,12 @@
     "plt.title(\"Attention vs. No Attention Loss\") \n",
     "plt.show()"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The model with attention converges to a much lower loss compared to the model without attention. This suggests that the attention mechanism helps in accurately learning the relationships between the shapes and their corresponding heights.TThe attention mechanism is effectively focusing on relevant parts of the input sequence to compute the mean heights of shapes by type. ",
+   "id": "ddd320b7cf40e12d"
   },
   {
    "cell_type": "code",
@@ -859,6 +875,7 @@
    },
    "outputs": [],
    "source": [
+    "# Train the model to predict the target sequence based on the input sequence\n",
     "# predict from Trainingsset\n",
     "x_sample, y_sample = training_data[0]\n",
     "x_sample = x_sample.unsqueeze(0)\n",
@@ -873,9 +890,7 @@
    "cell_type": "markdown",
    "id": "8d7d5bc4abc67d62",
    "metadata": {},
-   "source": [
-    "## Input vs. Ground Truth"
-   ]
+   "source": "## Input data vs. Ground Truth"
   },
   {
    "cell_type": "code",
@@ -900,6 +915,7 @@
     }
    ],
    "source": [
+    "# Visualize the input and target sequences to understand the data structure\n",
     "# Plot\n",
     "ShapeGen.plot_shapes(x_sample[0,0].cpu(), y_sample)"
    ]
@@ -908,9 +924,7 @@
    "cell_type": "markdown",
    "id": "c4f53b3ba443fc2c",
    "metadata": {},
-   "source": [
-    "## Prediction without Attention"
-   ]
+   "source": "## Prediction without Attention vs Ground Truth"
   },
   {
    "cell_type": "code",
@@ -935,16 +949,21 @@
     }
    ],
    "source": [
+    "# Visualize the input and target sequences to understand the data structure\n",
     "ShapeGen.plot_shapes(y_pred_no_attn.cpu(), y_sample)"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The model without attention predicts the position of the shapes but fails to accurately predict the heights. The attention is obvousliy needed to learn the relationships between the shapes and their heights.",
+   "id": "27a12d7eb3e8fa78"
   },
   {
    "cell_type": "markdown",
    "id": "2631cb4ee234fe6b",
    "metadata": {},
-   "source": [
-    "## Prediction with Attention"
-   ]
+   "source": "## Prediction with Attention vs Ground Truth"
   },
   {
    "cell_type": "code",
@@ -969,8 +988,15 @@
     }
    ],
    "source": [
+    "# Visualize the input and target sequences to understand the data structure\n",
     "ShapeGen.plot_shapes(y_pred_attn.cpu(), y_sample)"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "the attention-based model provides highly accurate predictions, as evidenced by the close alignment between the predicted values and the ground truth. The strong correspondence in both peak regions and flat segments highlights the model's ability to capture complex data dynamics, though slight improvements could be made to further refine the transitions. This proofs the attention mechanism's effectiveness in learning the relationships between the shapes and their heights.",
+   "id": "c2973ca06ceca506"
   },
   {
    "cell_type": "code",
@@ -993,6 +1019,7 @@
     }
    ],
    "source": [
+    "# Train the model to predict the target sequence based on the input sequence\n",
     "# Angenommen wir haben schon ein trainiertes Modell:\n",
     "model_with_attn = Conv1DNetWithAttention()\n",
     "# ... (Training-Code) ...\n",
@@ -1083,30 +1110,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "d9eb969ff6f56e3a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-05T18:35:58.120944Z",
-     "start_time": "2025-01-05T18:35:58.108603Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2621728102.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[17], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Attention weight heatmeap\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "Attention weight heatmeap\n",
-    "# attentionsweight in var speicher bei forward\n",
-    "tru and false für attention\n"
-   ]
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The heatmap indicates that this attention head focuses on localized and periodic patterns within the sequence, particularly around regions of higher relevance (e.g., positions 400, 600, and 800) as seen in the plot `Prediction with Attention vs Ground Truth`.",
+   "id": "78cf21444479aaf7"
   }
  ],
  "metadata": {
