--- a/vdl_mc_img-gen_cifar10.ipynb
+++ b/vdl_mc_img-gen_cifar10.ipynb
@@ -908,7 +908,6 @@
     "                    posterior_variance,\n",
     "                    y=y\n",
     "                )\n",
-    "                #img = torch.clamp(img, -1.0, 1.0) TODO: maybe use clamp\n",
     "                \n",
     "                if i % stepsize == 0:\n",
     "                    if visualize:\n",
@@ -2583,24 +2582,6 @@
    ],
    "source": [
     "calc_fid(real_1label_dir, gen_1label_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "1a25a7075808efc7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-04T15:56:50.021495Z",
-     "start_time": "2025-01-04T15:56:50.015768Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: FID Score\n",
-    "# TODO: ACHTUNG! testdaten enthalten alle labels, daher ist der FID score nicht aussagekräftig\n",
-    "# x_test_filtered = x_test[y_test.flatten() == selected_label]\n",
-    "# y_test_filtered = y_test[y_test.flatten() == selected_label]"
    ]
   },
   {
@@ -4602,10 +4583,10 @@
     "    \"loss\": loss\n",
     "}\n",
     "\n",
-    "torch.save(checkpoint, \"checkpoint_simpleU_all.pt\")\n",
-    "#%%\n",
+    "torch.save(checkpoint, \"checkpoint_simpleU_cond_all.pt\")\n",
+    "##%%\n",
     "#save model\n",
-    "torch.save(model_cond_all, \"SimpleU_entire_model_all.pth\")"
+    "torch.save(model_cond_all, \"SimpleU_entire_model_cond_all.pth\")"
    ]
   },
   {
