last documentations before deadline

--- a/vdl_mc_attentionTask.ipynb
+++ b/vdl_mc_attentionTask.ipynb
@@ -12,7 +12,6 @@
    },
    "outputs": [],
    "source": [
-    "# Import necessary libraries and modules for data generation and model training\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import shapes1d_dataset_generator as ShapeGen\n",
@@ -90,10 +89,12 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "The input y0 is a sequence of shapes, while the target y is a sequence of shapes with modified heights. The goal is to train a model to predict the target sequence y.",
-   "id": "95690e0ea3712d7a"
+   "id": "95690e0ea3712d7a",
+   "metadata": {},
+   "source": [
+    "The input y0 is a sequence of shapes, while the target y is a sequence of shapes with modified heights. The goal is to train a model to predict the target sequence y."
+   ]
   },
   {
    "cell_type": "code",
@@ -858,10 +859,12 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "The model with attention converges to a much lower loss compared to the model without attention. This suggests that the attention mechanism helps in accurately learning the relationships between the shapes and their corresponding heights.TThe attention mechanism is effectively focusing on relevant parts of the input sequence to compute the mean heights of shapes by type. ",
-   "id": "ddd320b7cf40e12d"
+   "id": "ddd320b7cf40e12d",
+   "metadata": {},
+   "source": [
+    "The model with attention converges to a much lower loss compared to the model without attention. This suggests that the attention mechanism helps in accurately learning the relationships between the shapes and their corresponding heights.The attention mechanism is effectively focusing on relevant parts of the input sequence to compute the mean heights of shapes by type. "
+   ]
   },
   {
    "cell_type": "code",
@@ -890,7 +893,9 @@
    "cell_type": "markdown",
    "id": "8d7d5bc4abc67d62",
    "metadata": {},
-   "source": "## Input data vs. Ground Truth"
+   "source": [
+    "## Input data vs. Ground Truth"
+   ]
   },
   {
    "cell_type": "code",
@@ -924,7 +929,9 @@
    "cell_type": "markdown",
    "id": "c4f53b3ba443fc2c",
    "metadata": {},
-   "source": "## Prediction without Attention vs Ground Truth"
+   "source": [
+    "## Prediction without Attention vs Ground Truth"
+   ]
   },
   {
    "cell_type": "code",
@@ -954,16 +961,20 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "The model without attention predicts the position of the shapes but fails to accurately predict the heights. The attention is obvousliy needed to learn the relationships between the shapes and their heights.",
-   "id": "27a12d7eb3e8fa78"
+   "id": "27a12d7eb3e8fa78",
+   "metadata": {},
+   "source": [
+    "The model without attention predicts the position of the shapes but fails to accurately predict the heights. The attention is obvousliy needed to learn the relationships between the shapes and their heights."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "2631cb4ee234fe6b",
    "metadata": {},
-   "source": "## Prediction with Attention vs Ground Truth"
+   "source": [
+    "## Prediction with Attention vs Ground Truth"
+   ]
   },
   {
    "cell_type": "code",
@@ -993,10 +1004,12 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "the attention-based model provides highly accurate predictions, as evidenced by the close alignment between the predicted values and the ground truth. The strong correspondence in both peak regions and flat segments highlights the model's ability to capture complex data dynamics, though slight improvements could be made to further refine the transitions. This proofs the attention mechanism's effectiveness in learning the relationships between the shapes and their heights.",
-   "id": "c2973ca06ceca506"
+   "id": "c2973ca06ceca506",
+   "metadata": {},
+   "source": [
+    "the attention-based model provides highly accurate predictions, as evidenced by the close alignment between the predicted values and the ground truth. The strong correspondence in both peak regions and flat segments highlights the model's ability to capture complex data dynamics, though slight improvements could be made to further refine the transitions. This proofs the attention mechanism's effectiveness in learning the relationships between the shapes and their heights. I tried it several times and always got similar results like this."
+   ]
   },
   {
    "cell_type": "code",
@@ -1110,10 +1123,12 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "The heatmap indicates that this attention head focuses on localized and periodic patterns within the sequence, particularly around regions of higher relevance (e.g., positions 400, 600, and 800) as seen in the plot `Prediction with Attention vs Ground Truth`.",
-   "id": "78cf21444479aaf7"
+   "id": "78cf21444479aaf7",
+   "metadata": {},
+   "source": [
+    "The heatmap indicates that this attention head focuses on localized and periodic patterns within the sequence, particularly around regions of higher relevance (e.g., positions 400, 600, and 800) as seen in the plot `Prediction with Attention vs Ground Truth`."
+   ]
   }
  ],
  "metadata": {
@@ -1132,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
